--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,8 @@ Django==3.2
 gunicorn==20.1.0
 pytz==2022.1
 sqlparse==0.4.2
+django-allauth==0.50.0
+django-crispy-forms==1.14.0
+django-debug-toolbar==3.4.0
 whitenoise
 gunicorn
