--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ sqlparse==0.4.2
 django-allauth==0.50.0
 django-crispy-forms==1.14.0
 django-debug-toolbar==3.4.0
+Pillow==9.1.1
 whitenoise
 gunicorn
