--- a/requirements12.txt
+++ b/requirements12.txt
@@ -11,6 +11,7 @@ django-debug-toolbar==3.4.0
 gunicorn==20.1.0
 idna==3.3
 oauthlib==3.2.0
+Pillow==9.1.1
 pycparser==2.21
 PyJWT==2.4.0
 python3-openid==3.2.0
