--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ sqlparse==0.4.2
 django-allauth==0.50.0
 django-crispy-forms==1.14.0
 django-debug-toolbar==3.4.0
+django-seed==0.3.1
+psycopg2==2.9.3
 Pillow==9.1.1
 whitenoise
 gunicorn
