--- a/requirements12.txt
+++ b/requirements12.txt
@@ -8,16 +8,22 @@ Django==3.2
 django-allauth==0.50.0
 django-crispy-forms==1.14.0
 django-debug-toolbar==3.4.0
+django-seed==0.3.1
+Faker==13.12.0
 gunicorn==20.1.0
 idna==3.3
 oauthlib==3.2.0
 Pillow==9.1.1
+psycopg2==2.9.3
 pycparser==2.21
 PyJWT==2.4.0
+python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2022.1
 requests==2.27.1
 requests-oauthlib==1.3.1
+six==1.16.0
 sqlparse==0.4.2
+toposort==1.7
 urllib3==1.26.9
 whitenoise==6.1.0
