--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ gunicorn==20.1.0
 pytz==2022.1
 sqlparse==0.4.2
 django-allauth==0.50.0
+django-ckeditor==6.4.2
 django-crispy-forms==1.14.0
 django-debug-toolbar==3.4.0
 django-seed==0.3.1
