--- a/requirements12.txt
+++ b/requirements12.txt
@@ -1,4 +1,5 @@
 asgiref==3.5.2
+autopep8==1.6.0
 certifi==2022.5.18.1
 cffi==1.15.0
 charset-normalizer==2.0.12
@@ -6,8 +7,10 @@ cryptography==37.0.2
 defusedxml==0.7.1
 Django==3.2
 django-allauth==0.50.0
+django-ckeditor==6.4.2
 django-crispy-forms==1.14.0
 django-debug-toolbar==3.4.0
+django-js-asset==2.0.0
 django-seed==0.3.1
 Faker==13.12.0
 gunicorn==20.1.0
@@ -15,6 +18,7 @@ idna==3.3
 oauthlib==3.2.0
 Pillow==9.1.1
 psycopg2==2.9.3
+pycodestyle==2.8.0
 pycparser==2.21
 PyJWT==2.4.0
 python-dateutil==2.8.2
@@ -24,6 +28,7 @@ requests==2.27.1
 requests-oauthlib==1.3.1
 six==1.16.0
 sqlparse==0.4.2
+toml==0.10.2
 toposort==1.7
 urllib3==1.26.9
 whitenoise==6.1.0
