--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ django-ckeditor==6.4.2
 django-crispy-forms==1.14.0
 django-debug-toolbar==3.4.0
 django-seed==0.3.1
-psycopg2==2.9.3
+# psycopg2
 Pillow==9.1.1
 whitenoise
 gunicorn
